# public_task

./: .gitignore  CHANGELOG.md  README.md  test  测试理论基础探索(含gtest与c++性能测试初步探索).md  测试理论基础探索.md  测试用例.xls
Armor_plate/: CHANGELOG.md  README.md
Armor_plate/Armor_plate_identification/: Armor_plate_identification.sln  Armor_plate_identification.vcxproj  main.cpp
Armor_plate/Armor_plate_identification/Debug/: vc142.idb
Armor_plate/Armor_plate_identification/Debug/Armor_pl.55318142.tlog/: Armor_plate_identification.lastbuildstate
Armor_plate/Armor_plate_identification/x64/Debug/: Armor_plate_identification.exe.recipe  Armor_plate_identification.ilk  Armor_plate_identification.vcxproj.FileListAbsolute.txt  main.obj.enc  vc142.idb
Armor_plate/Armor_plate_identification/x64/Debug/Armor_pl.55318142.tlog/: Armor_plate_identification.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CMake_II-master/: CMakeLists.txt  client.cpp
CMake_II-master/common/: CMakeLists.txt
CMake_II-master/modules/: .CMakeLists.txt.swp  CMakeLists.txt
Energy_mechanism/Energy_mechanism/: Energy_mechanism.sln  Energy_mechanism.vcxproj  main.cpp
Energy_mechanism/Energy_mechanism/x64/Debug/: Energy_mechanism.exe.recipe  Energy_mechanism.ilk  Energy_mechanism.vcxproj.FileListAbsolute.txt  main.obj.enc  vc142.idb
Energy_mechanism/Energy_mechanism/x64/Debug/Energy_mechanism.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Energy_mechanism.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Energy_mechanism/src/: main.cpp
GTEST/tests/: CMakeLists.txt
armor_detector/: CMakeLists.txt  main.cpp
armor_detector/include/: armor_detector.h
armor_detector/src/: armor_detector.cpp  detect.cpp  distance.cpp  match.cpp  pretreat.cpp
armor_detector/test/: CMakeLists.txt  armor_detector_test.cpp
energy_detector/: CMakeLists.txt  main.cpp
energy_detector/include/: energy_detector.h
energy_detector/src/: detect.cpp  distance.cpp  energyAngle.cpp  energy_detector.cpp  pretreat.cpp
src/: 1.html  Armor_plate.cpp  Armor_plate.out  Energy_mechanism.cpp  Energy_mechanism.out
